# Data-Pipeline-Storage

./: .gitignore  README.md  pyproject.toml
src/project6/: export.py  export_csv_files.py  load_data.py  trigger_bigquery_test_on_GCP.py  trigger_bigquery_test_on_local.py
